# recruiting-sw-telemetry-2

Teleme/: CMakeLists.txt  fake_receiver.c  main.cpp
Teleme/code/: start_codes.txt  stop_codes.txt
